# govc

./: .gitignore  .golangci.yml  ADVANCED_SEARCH.md  API_HANDLER_TESTS_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_2024_08_02.md  CODEBASE_REVIEW_POST_REFACTOR_2024_08_02.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_REPORT.md  DATASTORE_IMPLEMENTATION_PLAN.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_STATUS.md  Dockerfile  FEATURE_PLAN_V2.md  GRPC_IMPLEMENTATION.md  HTTP_OPTIMIZATIONS_RESULTS.md  IMPLEMENTATION_PLAN.md  INTEGRATION.md  INTEGRATION_TEST_RESULTS.md  LIBRARY_USAGE.md  LICENSE  MIGRATION_GUIDE.md  Makefile  NETWORK_LATENCY_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_INSIGHTS_AND_ROADMAP.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PERFORMANCE_VALIDATION_RESULTS.md  PHASE_A_COMPLETION_REPORT.md  PROJECT_REVIEW.md  QUICK_START.md  README.md  README_INTEGRATION.md  README_NEW.md  (+79 more)
.analysis/: analysis_report.md  coverage.html  coverage_summary.txt
:memory:/: cdn.conf  deployment.yaml  region.conf
api/: README.md  TESTING.md  api_auth_integration_test.go  api_benchmark_test.go  api_comprehensive_test.go  api_git_integration_test.go  api_integration_test.go  api_stress_test.go  api_test.go  batch_operations.go  batch_operations_test.go  cluster_handlers.go  csrf.go  csrf_test.go  error_handling_test.go  grpc_server.go  grpc_server.go.disabled  handlers_ai.go  handlers_auth.go  handlers_blame.go  handlers_blame_test.go  handlers_branch.go  handlers_cherrypick.go  handlers_cherrypick_test.go  handlers_container.go  handlers_container_test.go  handlers_csrf.go  handlers_diff.go  handlers_diff_test.go  handlers_file.go  handlers_file_test.go  handlers_file_v2.go  handlers_git.go  handlers_git_v2.go  handlers_health.go  handlers_hooks.go  handlers_hooks_test.go  handlers_hooks_v2.go  handlers_importexport.go  handlers_memory.go  (+23 more)
auth/: apikey.go  apikey_test.go  jwt.go  jwt_test.go  middleware.go  middleware_test.go  (+2 more)
client/python/: .gitignore  README.md  pyproject.toml  setup.py
client/python/examples/: quickstart.py
client/python/govc/: __init__.py  client.py  config.py  exceptions.py  models.py  repository.py
(+404 files in other folders)
